# issue_observatory_search

./: .clinerules  .env.example  .gitignore  ALL_FIXES_SUMMARY.md  CLAUDE.md  CODE_REVIEW_FIXES_APPLIED.md  Dockerfile  Dockerfile.prod  FINAL_DEPENDENCY_FIXES.md  INSTALLATION.md  README.md  SERPER_PAGINATION_UPDATE.md  TESTING_GUIDE.md  TESTING_QUICKSTART.md  TEST_DATABASE_TROUBLESHOOTING.md  TEST_FIXES_APPLIED.md  add_excluded_domains_column.py  alembic.ini  app.py  case_scraper.py  changes_on_9_dec  check_celery_tasks.py  check_data.py  check_networks.py  check_task_status.py  co2.csv  co2.gexf  co2.txt  co2_2.csv  co2_2.gexf  config.py  create_user.py  docker-compose.prod.yml  docker-compose.yml  fix_analysis_columns.py  minimal_graphology_example.html  pyproject.toml  requirements-optional.txt  requirements.txt  run_analysis.py  (+8 more)
.claude/agents/: backend-architect.md  code-reviewer.md  digital-methods-specialist.md  frontend-developer.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
OLD_CODE/: __init__.py
OLD_CODE/api/: __init__.py  auth.py  network.py
OLD_CODE/services/: network_analyzer.py  search_engines.py
OLD_CODE/templates/: base.html  dashboard.html  networks.html  scrapes.html  search_terms.html
alembic/versions/: add_excluded_domains.py
app/: __init__.py
app/api/: network.py  scraping.py
app/models/: __init__.py  scrape.py  search_terms.py  user.py
app/services/: __init__.py  scraper.py  search_engines.py
app/templates/: dashboard.html  login.html  scrapes.html
archive/: FINAL_SESSION_SUMMARY.txt  PHASE10_COMPLETION_REPORT.txt  STRUCTURE_VERIFICATION.txt  Start for issue_observatory_search.txt
backend/: celery_app.py  config.py  database.py  main.py
backend/api/: admin.py  advanced_search.py  analysis.py  auth.py  bulk_search.py  frontend.py  networks.py  partials.py  scraping.py  search.py
backend/core/: exceptions.py
backend/middleware/: __init__.py  db_profiler.py  error_handler.py  rate_limit.py
backend/models/: __init__.py  analysis.py  bulk_search.py  network.py  query_expansion.py  query_template.py  scraping.py  search.py  user.py  website.py
backend/monitoring/: health.py  metrics.py
backend/repositories/: __init__.py  (+3 more)
config/: .env.example
config_examples/: .env  customsearch_keys.json
docs/: ADVANCED_SEARCH_GUIDE.md  AGENT_PROMPTS.md  API_SPECIFICATION.md  API_USAGE_GUIDE.md  CODE_REVIEW_FIXES_APPLIED.md  DATABASE_SCHEMA.md  DATABASE_SETUP.md  DATA_PERSISTENCE_GUIDE.md  DEPENDENCY_FIXES.md  DEPLOYMENT_GUIDE.md  DEVELOPER_QUICKSTART.md  DOCKER_COMPOSE_NOTE.md  FRONTEND_COMPLETION_SUMMARY.md  FRONTEND_COMPONENTS.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_QUICKSTART.md  FRONTEND_STRUCTURE.md  GIANT_COMPONENT_DEBUG_GUIDE.md  GRAPHOLOGY_MIGRATION.md  GRAPHOLOGY_MIGRATION_PLAN.md  HURTIG_GUIDE_DA.md  IMPLEMENTATION_ROADMAP.md  IMPORT_CONFLICTS_FIX.md  INDEX.md  KEYBOARD_SHORTCUTS.md  KEYWORD_EXTRACTION_GUIDE.md  LLM_CONCEPT_EXTRACTION_SPECIFICATION.md  MONITORING_GUIDE.md  NER_NETWORKS_GUIDE.md  NETWORK_BACKBONING_SPECIFICATION.md  NETWORK_GENERATION_GUIDE.md  NETWORK_VISUALIZATION_SETTINGS.md  PARAMETER_ORDER_FIX.md  PERFORMANCE.md  PERFORMANCE_QUICK_REFERENCE.md  PHASE10_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_ANALYSIS_GUIDE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  (+34 more)
frontend/: README.md
keys/: customsearch_keys.json
migrations/: env.py
monitoring/: prometheus.yml
nginx/: Dockerfile  nginx.conf
scripts/: add_users.py  backup-all.sh  backup-db.sh  benchmark.py  create_admin.py  fix_import_errors.sh  generate_demo_data.py  install_nlp_models.py  setup_test_db.sh  verify_installation.py
tests/: conftest.py  test_admin.py  test_auth.py  test_monitoring.py  test_performance.py  test_scraping.py  test_search_endpoints.py  test_search_engines.py  test_security.py  test_serper_search.py  test_synthetic_performance.py
(+102 files in other folders)
