[metadata]
name = issue-observatory-search
version = 5.0.0
description = Web application for mapping issues through web searches and content analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/issue-observatory-search
author = Issue Observatory Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.104.0,<1.0.0
    uvicorn[standard]>=0.24.0,<1.0.0
    sqlalchemy[asyncio]>=2.0.23,<3.0.0
    psycopg[binary]>=3.1.0,<4.0.0
    alembic>=1.12.1,<2.0.0
    pydantic>=2.5.0,<3.0.0
    pydantic-settings>=2.1.0,<3.0.0
    python-jose[cryptography]>=3.3.0,<4.0.0
    passlib[bcrypt]>=1.7.4,<2.0.0
    python-multipart>=0.0.6,<1.0.0
    redis>=4.5.0,<5.0.0
    celery>=5.3.4,<6.0.0
    httpx>=0.25.2,<1.0.0

[options.packages.find]
include = backend*

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    black>=23.11.0
    ruff>=0.1.6
    mypy>=1.7.1

[options.entry_points]
console_scripts =
    issue-observatory = backend.cli:main

[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --cov=backend --cov-report=term-missing
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[flake8]
max-line-length = 88
extend-ignore = E203, E501

[black]
line-length = 88
target-version = py311
include = \.pyi?$

[ruff]
line-length = 88
target-version = py311
select = E,W,F,I,B,C4
ignore = E501,B008
