[metadata]
name = issue-observatory-search
version = 5.0.0
description = Web application for mapping issues through web searches and content analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/issue-observatory-search
author = Issue Observatory Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
python_requires = >=3.11
# Note: install_requires is defined in setup.py which reads from requirements.txt
# This avoids duplication and ensures single source of truth

[options.packages.find]
include = backend*

# Note: extras_require['dev'] is defined in setup.py
# to avoid duplication between setup.py and setup.cfg

[options.entry_points]
console_scripts =
    issue-observatory = backend.cli:main

[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --cov=backend --cov-report=term-missing
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[flake8]
max-line-length = 88
extend-ignore = E203, E501

[black]
line-length = 88
target-version = py311
include = \.pyi?$

[ruff]
line-length = 88
target-version = py311
select = E,W,F,I,B,C4
ignore = E501,B008
